--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <body style = "color: white", font-family: "bodoni MT">
  
 
-    <!-- aqui va foto -->
-    <h1><center>Essentielle</center></h1>
+    <!-- aqui va foto 
+    <h1><center>Essentielle</center></h1> -->
+    <h1><center><img src = "./essentielle" alt = "logo" /></center></h1>
+    <h2><center><button id = "admin">Admin</button></center></h2>
+    <h2><center><button id = "usuario">Usuario</button></center></h2>
+
 
 
    
