--- a/password.html
+++ b/password.html
@@ -10,8 +10,15 @@
 </head>
 
     <body style = "color: white", font-family: "bodoni MT">
-    hello
     
+    <!-- width: 400, height: 220 -->
+
+     <h1><center> Introducir contraseña</center>  </h1>
+    <h2><center> <input type = "text" name = "password" value = "" id = "password" 
+     placeholder = "Contraseña" class = "form-control" required></center></h2>
+
+     <h3><center><input type = "button" name = "btnpass" value = "Aceptar" id = "pw" 
+     placeholder = "Contraseña" style="height:30px; width:100px" ></center></h3>
 
    
   </body>
