--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <!-- aqui va foto -->
     
-    <h1><center><img src = "./essentielle" alt = "logo" /></center></h1>
-    <h2><center><button id = "admin">Admin</button></center></h2>
-    <h2><center><button id = "usuario">Usuario</button></center></h2>
+    <h1><center><img src = "./essentielle2" alt = "logo" /></center></h1>
+    <h2><center><button id = "admin" style="height:75px; width:150px" border = "10">Admin</button></center></h2>
+    <h2><center><button id = "usuario" style="height:75px; width:150px" border = "10">Usuario</button></center></h2>
     
 
    
