agregue precios a cada producto

--- a/productos.html
+++ b/productos.html
@@ -25,43 +25,43 @@
   
     
     <tr>
-       <td><center>Champú</center></td><td><center><button id = "v1" style="height:25px; width:150px" >Vender</button></td>
+       <td><center>Champú</center></td><center><td>$50.00</td></center><td><center><button id = "v1" style="height:25px; width:150px" >Vender</button></td>
     </tr>
     
     <tr>
-       <td><center>Gel</center></td><td><center><button id = "v2" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+       <td><center>Gel</center></td><center><td>$30.00</td></center><td><center><button id = "v2" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Spray para cabello</center></td><td><center><button id = "v3" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Spray para cabello</center></td><center><td>$40.00</td></center><td><center><button id = "v3" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Champú naturista</center></td><td><center><button id = "v4" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Champú naturista</center></td><center><td>$55.00</td></center><td><center><button id = "v4" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Champú con acondicionador</center></td><td><center><button id = "v5" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Champú con acondicionador</center></td><center><td>$60.00</td></center><td><center><button id = "v5" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Acondicionador</center></td><td><center><button id = "v6" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Acondicionador</center></td><center><td>$45.00</td></center><td><center><button id = "v6" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Champú anti caspa</center></td><td><center><button id = "v7" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Champú anti caspa</center></td><center><td>$58.00</td></center><td><center><button id = "v7" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Champú para limpieza profunda</center></td><td><center><button id = "v8" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Champú para limpieza profunda</center></td><center><td>$60.00</td></center><td><center><button id = "v8" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Champú para cabello seco</center></td><td><center><button id = "v9" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Champú para cabello seco</center></td><center><td>$55.00</td></center><td><center><button id = "v9" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
     <tr>
-        <td><center>Champú anti caida</center></td><td><center><button id = "v10" style="height:25px; width:150px" border = "25">Vender</button></center></td>
+        <td><center>Champú anti caida</center></td><center><td>$60.00</td></center><td><center><button id = "v10" style="height:25px; width:150px" border = "25">Vender</button></center></td>
     </tr>
 
 
