GUI casi terminada, solo blanco donde hay logo

--- a/productos.html
+++ b/productos.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Essentielle App</title>
-    <style>body{background-color: #1B2737} </style>
-    <link rel = "stylesheet" 
-    href = "./bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    
+    <style>
+		body{color: white; font-family: 'Open Sans', sans-serif}
+		button{font-family: 'Roboto', sans-serif; background-color:#FFFFFF;}
+		hover:button{background-color:#D8D8D8;}
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
 </head>
 
-   <body style = "color: white", font-family: "bodoni MT">
+   <body>
    
     
    <h1>
