--- a/password.html
+++ b/password.html
@@ -3,17 +3,37 @@
   <head>
     <meta charset="UTF-8">
     <title>Essentielle App</title>
-    <style>body{background-color: #1B2737} </style>
-    <link rel = "stylesheet" 
-    href = "./bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    
+   <style>
+		body{
+			color: white; 
+			font-family: 'Open Sans', sans-serif; 
+			font-size:12px;
+			background-color: #1B2737;
+			}
+			
+		input{
+			font-family: 'Roboto', sans-serif; 
+			color:#1B2737; 
+			border-radius:10px;
+			box-shadow: 5px 5px #1B1C27;
+			
+			}
+		button:hover{
+			background-color:#151E29;
+		}
+		button:active{
+			transform:translateY(2px);
+		}
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
 </head>
 
-    <body style = "color: white", font-family: "bodoni MT">
+    <body>
     
     <!-- width: 400, height: 220 -->
-
-     <h1><center> Introducir contraseña</center>  </h1>
+	
+     <h1><center><br><br> Introducir contraseña</center>  </h1>
+     <center> <br><img src="lock.png" alt="Lock" style="width:200px"> <br><br></center>
     <h2><center> <input type = "text" name = "password" value = "" id = "password" 
      placeholder = "Contraseña" class = "form-control" required></center></h2>
 
