--- a/daralta.html
+++ b/daralta.html
@@ -24,8 +24,10 @@
 			color:#1B2737; 
 			border-radius:10px;
 			box-shadow: 5px 5px #1B1C27;
-			
 			}
+			input:hover{
+			background-color: #D0D0D0;
+		}
     </style>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
 </head>
