--- a/inventario.html
+++ b/inventario.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <title>Essentielle App</title>
    <style>
-		body{color: white; font-family: 'Open Sans', sans-serif}
-		button{font-family: 'Roboto', sans-serif; background-color:#FFFFFF;}
-		hover:button{background-color:#D8D8D8;}
+		body{
+			color: white; 
+			font-family: 'Open Sans', sans-serif; 
+			font-size:12px;
+			background-color: #1B2737;
+			}
+			
+		button{
+			font-family: 'Roboto', sans-serif; 
+			color:#1B2737; 
+			border-radius:10px;
+			}
+		button:hover{
+			background-color: #D0D0D0;
+		}
+		button:active{
+			transform:translateY(1px);
+		}
     </style>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
 </head>
